--- a/Snip/Snip.csproj
+++ b/Snip/Snip.csproj
@@ -113,6 +113,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiHelper.cs" />
     <Compile Include="ApplicationKeys.cs" />
     <Compile Include="AssemblyInformation.cs" />
     <Compile Include="CheckVersion.cs" />
@@ -130,6 +131,9 @@
     <Compile Include="Players\NoPlayer.cs" />
     <Compile Include="Players\Spotify.cs" />
     <Compile Include="Players\Itunes.cs" />
+    <Compile Include="Players\VLC.cs" />
+    <Compile Include="ProcessFunctions.cs" />
+    <Compile Include="ProcessMemoryChunk.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -187,24 +191,23 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Strings.da-DK.txt" />
-    <Content Include="Resources\Strings.el-GR.txt" />
-    <Content Include="Resources\Strings.cs-CZ.txt" />
-    <Content Include="Resources\Strings.pl-PL.txt" />
-    <Content Include="Resources\Strings.es-CL.txt" />
-    <Content Include="Resources\Strings.nb-NO.txt" />
-    <Content Include="Resources\Strings.sv-SE.txt" />
+    <Content Include="Resources\Images\FolderIcon.png" />
+    <Content Include="Resources\Images\Players\iTunes.png" />
+    <Content Include="Resources\Images\Players\Spotify.png" />
+    <Content Include="Resources\Images\Players\VLC.png" />
+    <Content Include="Resources\Strings.ru-RU.txt" />
     <Content Include="Resources\Strings.txt" />
-    <Content Include="Resources\Strings.fr-FR.txt" />
-    <Content Include="Resources\Strings.nl-NL.txt" />
-    <Content Include="Resources\Strings.zh-TW.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Strings.de-AT.txt" />
-    <Content Include="Resources\Strings.de-CH.txt" />
-    <Content Include="Resources\Strings.de-DE.txt" />
-  </ItemGroup>
-  <ItemGroup>
+    <COMReference Include="iTunesAdminLib">
+      <Guid>{2F93D606-28F9-4B2D-A024-2DDEE124B542}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
     <COMReference Include="iTunesLib">
       <Guid>{9E93C96F-CF0D-43F6-8BA8-B807A3370712}</Guid>
       <VersionMajor>1</VersionMajor>
