--- a/Snip/packages.config
+++ b/Snip/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="ExCSS" version="4.1.4" targetFramework="net48" />
   <package id="Fizzler" version="1.2.1" targetFramework="net48" />
-  <package id="KM.Yandex.Music.Api" version="1.2.1" targetFramework="net48" />
+  <package id="KM.Yandex.Music.Api" version="1.3.0" targetFramework="net48" />
+  <package id="KM.Yandex.Music.Client" version="1.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="7.0.0" targetFramework="net48" />
@@ -26,13 +27,13 @@
   <package id="Microsoft.Extensions.Logging.EventSource" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="7.0.0" targetFramework="net48" />
+  <package id="Svg" version="3.4.4" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
-  <package id="Svg" version="3.4.4" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
