--- a/Snip/packages.config
+++ b/Snip/packages.config
@@ -2,10 +2,18 @@
 <packages>
   <package id="ExCSS" version="4.1.4" targetFramework="net48" />
   <package id="Fizzler" version="1.2.1" targetFramework="net48" />
-  <package id="KM.Yandex.Music.Api" version="1.3.1" targetFramework="net48" />
-  <package id="KM.Yandex.Music.Client" version="1.3.1" targetFramework="net48" />
+  <package id="KM.Yandex.Music.Api" version="1.3.2" targetFramework="net48" />
+  <package id="KM.Yandex.Music.Client" version="1.3.2" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net48" />
+  <package id="NAudio" version="2.1.0" targetFramework="net48" />
+  <package id="NAudio.Asio" version="2.1.0" targetFramework="net48" />
+  <package id="NAudio.Core" version="2.1.0" targetFramework="net48" />
+  <package id="NAudio.Midi" version="2.1.0" targetFramework="net48" />
+  <package id="NAudio.Wasapi" version="2.1.0" targetFramework="net48" />
+  <package id="NAudio.WinForms" version="2.1.0" targetFramework="net48" />
+  <package id="NAudio.WinMM" version="2.1.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Svg" version="3.4.4" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
@@ -16,10 +24,12 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="7.0.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
